<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.fbrandao.activity.MenuActivity"
    tools:showIn="@layout/home"
    android:background="@color/colorAccent">

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoStart="true"
        android:flipInterval="5000">

        <!-- view 01 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_home_view_01"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_01"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_01"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="26dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        </LinearLayout>

        <!-- view 02 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_home_view_02"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_02"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <WebView
                android:id="@+id/texto_home_view_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_02"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <ImageView
                android:id="@+id/imagem_home_view_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/image_home_view_02" />
        </LinearLayout>

        <!-- view 03 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_03"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <WebView
                android:id="@+id/texto_home_view_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_03"
                android:textSize="16sp"
                android:layout_marginTop="26dp"/>
            <ImageView
                android:id="@+id/imagem_home_view_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/background_home_view_03" />
        </LinearLayout>

        <!-- view 04 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_home_view_02"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_04"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <WebView
                android:id="@+id/texto_home_view_04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_04"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="26dp"/>
            <ImageView
                android:id="@+id/imagem_home_view_04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/image_home_view_04" />
        </LinearLayout>

        <!-- view 05 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_05"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <WebView
                android:id="@+id/texto_home_view_05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_05"
                android:textSize="16sp"
                android:layout_marginTop="26dp"/>
            <ImageView
                android:id="@+id/imagem_home_view_05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/image_home_view_05" />
        </LinearLayout>

        <!-- view 06 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_home_view_02"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_06"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <WebView
                android:id="@+id/texto_home_view_06_part_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_06_part_one"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <WebView
                android:id="@+id/texto_home_view_06_part_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_06_part_two"
                android:textColor="@color/white"
                android:textSize="16sp"/>
            <WebView
                android:id="@+id/texto_home_view_06_part_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_06_part_three"
                android:textColor="@color/white"
                android:textSize="16sp"/>
            <ImageView
                android:id="@+id/imagem_home_view_06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/image_home_view_06" />
        </LinearLayout>

        <!-- view 07 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_07"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <ImageView
                android:id="@+id/imagem_home_view_07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/image_home_view_07" />
            <WebView
                android:id="@+id/texto_home_view_07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_07"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
        </LinearLayout>

        <!-- view 08 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_08"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <WebView
                android:id="@+id/texto_home_view_08"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_08"
                android:textSize="16sp"
                android:layout_marginTop="66dp"/>
            <ImageView
                android:id="@+id/imagem_home_view_08"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/image_home_view_08"/>
        </LinearLayout>

        <!-- view 09 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_home_view_02"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_09"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <WebView
                android:id="@+id/texto_home_view_09"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_09"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="36dp"/>
            <ImageView
                android:id="@+id/imagem_home_view_09"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/image_home_view_09"/>
        </LinearLayout>

        <!-- view 10 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTintMode="@color/blue"
            android:background="@drawable/background_home_view_10"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_10"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <WebView
                android:id="@+id/texto_home_view_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_10"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="36dp"/>
            <ImageView
                android:id="@+id/imagem_home_view_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/image_home_view_10"/>
        </LinearLayout>

        <!-- view 11 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_home_view_11"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_11_part_one"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
            <WebView
                android:id="@+id/texto_home_view_11_part_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_11_part_one"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
            <ImageView
                android:id="@+id/imagem_home_view_11"
                android:layout_width="105dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/image_home_view_11"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_home_view_11_part_two"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
            <WebView
                android:id="@+id/texto_home_view_11_part_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_view_11_part_two"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </ViewFlipper>


</android.support.constraint.ConstraintLayout>
